// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SiteHeader > matches desktop snapshot with actions 1`] = `
<DocumentFragment>
  <div
    class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
    data-slot="sidebar-wrapper"
    style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
  >
    <header
      class="group-has-data-[collapsible=icon]/sidebar-wrapper:h-12 sticky top-0 z-10 border-b bg-background/80 backdrop-blur supports-[backdrop-filter]:bg-background/60 transition-[width,height] ease-linear"
    >
      <div
        class="mx-auto w-full max-w-[1400px] px-3 md:px-6"
      >
        <div
          class="flex flex-col gap-3 py-3 md:flex-row md:items-center md:justify-between"
        >
          <div
            class="flex w-full items-start gap-3 md:items-center"
          >
            <div
              class="flex items-center gap-2"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground size-7 -ml-1"
                data-sidebar="trigger"
                data-slot="sidebar-trigger"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-panel-left"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="3"
                  />
                  <path
                    d="M9 3v18"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Toggle Sidebar
                </span>
              </button>
              <div
                class="shrink-0 bg-border/70 h-full w-px mx-2 hidden data-[orientation=vertical]:h-5 sm:block"
                data-orientation="vertical"
                role="none"
              />
            </div>
            <div
              class="flex min-w-0 flex-1 flex-col gap-1"
            >
              <h1
                class="text-base font-semibold leading-tight sm:text-lg"
              >
                Schedule
              </h1>
              <p
                class="text-sm text-muted-foreground line-clamp-2 md:line-clamp-none"
              >
                Theo dõi và quản lý phân ca.
              </p>
              <nav
                aria-label="Breadcrumb"
                class="w-full"
              >
                <ol
                  class="flex flex-wrap items-center gap-1.5 text-sm text-muted-foreground"
                >
                  <li
                    class="inline-flex items-center gap-1"
                  >
                    <a
                      class="inline-flex items-center gap-1 transition-colors hover:text-foreground"
                      data-discover="true"
                      href="/"
                    >
                      Dashboard
                    </a>
                    <span
                      class="text-muted-foreground"
                      role="presentation"
                    >
                      /
                    </span>
                  </li>
                  <li
                    class="inline-flex items-center gap-1"
                  >
                    <span
                      aria-current="page"
                      class="font-medium text-foreground"
                    >
                      Schedule
                    </span>
                  </li>
                </ol>
              </nav>
            </div>
          </div>
          <div
            class="flex w-full justify-end gap-2 md:w-auto md:justify-end"
          >
            <button
              type="button"
            >
              Tạo mới
            </button>
          </div>
        </div>
      </div>
    </header>
  </div>
  <section
    aria-atomic="false"
    aria-label="Notifications alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    tabindex="-1"
  />
</DocumentFragment>
`;

exports[`SiteHeader > matches mobile snapshot 1`] = `
<DocumentFragment>
  <div
    class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
    data-slot="sidebar-wrapper"
    style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
  >
    <header
      class="group-has-data-[collapsible=icon]/sidebar-wrapper:h-12 sticky top-0 z-10 border-b bg-background/80 backdrop-blur supports-[backdrop-filter]:bg-background/60 transition-[width,height] ease-linear"
    >
      <div
        class="mx-auto w-full max-w-[1400px] px-3 md:px-6"
      >
        <div
          class="flex flex-col gap-3 py-3 md:flex-row md:items-center md:justify-between"
        >
          <div
            class="flex w-full items-start gap-3 md:items-center"
          >
            <div
              class="flex items-center gap-2"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground size-7 -ml-1"
                data-sidebar="trigger"
                data-slot="sidebar-trigger"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-panel-left"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="3"
                  />
                  <path
                    d="M9 3v18"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Toggle Sidebar
                </span>
              </button>
              <div
                class="shrink-0 bg-border/70 h-full w-px mx-2 hidden data-[orientation=vertical]:h-5 sm:block"
                data-orientation="vertical"
                role="none"
              />
            </div>
            <div
              class="flex min-w-0 flex-1 flex-col gap-1"
            >
              <h1
                class="text-base font-semibold leading-tight sm:text-lg"
              >
                Schedule
              </h1>
              <p
                class="text-sm text-muted-foreground line-clamp-2 md:line-clamp-none"
              >
                Theo dõi và quản lý phân ca.
              </p>
              <nav
                aria-label="Breadcrumb"
                class="w-full"
              >
                <ol
                  class="flex flex-wrap items-center gap-1.5 text-sm text-muted-foreground"
                >
                  <li
                    class="inline-flex items-center gap-1"
                  >
                    <span
                      aria-current="page"
                      class="font-medium text-foreground"
                    >
                      Schedule
                    </span>
                  </li>
                </ol>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
  <section
    aria-atomic="false"
    aria-label="Notifications alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    tabindex="-1"
  />
</DocumentFragment>
`;
